fix(wizard): Properly align the back arrow with the title

--- a/stylus/components/wizard.styl
+++ b/stylus/components/wizard.styl
@@ -101,11 +101,12 @@ $wizard-header
     flex-direction column
     box-sizing border-box
     max-width rem(544)
-    margin rem(16) auto rem(8)
+    margin rem(16) 0 rem(8)
     padding 0 rem(16)
+    position relative
 
     +small-device()
-        margin rem(16) auto 0
+        margin rem(16) 0 0
 
 $wizard-header--dual
     margin-bottom rem(32)
@@ -241,12 +242,16 @@ $wizard-desc--footer
 
 $wizard-header-fixed
     position fixed
-    top rem(14)
-    left 0
+    top rem(8)
+    left rem(16)
     display inline-flex
     align-items center
 
 $wizard-previous
+    position absolute
+    top 50%
+    left 0
+    transform translateY(-50%)
     margin 0
     padding rem(10) rem(16)
     color var(--coolGrey)
